# django-blog

./: .flake8  MANIFEST.in  lint-requirements.txt  requirements.txt  setup.cfg
.github/workflows/: django.yml
myblog/: datadump.json  git.Repo.py  manage.py
myblog/blog/: admin.py  forms.py  models.py  tests.py  views.py
myblog/blog/migrations/: 0001_initial.py  0002_auto_20211124_1645.py  0002_auto_20211125_0908.py  0002_post.py  0003_author.py  0003_auto_20211028_0915.py  0003_comment.py  0004_author.py  0005_auto_20211110_1140.py  0006_auto_20211115_1231.py
myblog/blog/static/css/: blog.css
myblog/blog/templates/blog/: add_comment.html  base.html  blog_post.html  home.html  post.html  post_draft_list.html  post_edit.html
myblog/blog/tests/: test_selenium.py  test_simple.py
myblog/myblog/: asgi.py  settings.py  urls.py  wsgi.py
