[metadata]
name = django-blog-tenaciouscri
version = 0.0.1
author = M. Cristina Delvecchio
author_email = cridelve@gmail.com
description = A simple django blog
long_description = file : README.md
long_description_content_type = text/markdown
url = https://github.com/tenaciouscri/django-blog
project_urls =
    Bug Tracker = https://github.com/tenaciouscri/django-blog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Framework :: Django :: 3.2
    Operating System :: OS Independent

[options]
package_dir =
    = myblog
packages = find:
python_requires = >=3.6
install_requires =
include_package_data = True

[options.packages.find]
where = myblog